[package]
name = "actix-rag-qdrant"
version = "0.1.0"
authors = ["Thanaphoom Babparn <tp.babparn@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
env_logger = "0.11.3"
futures-util = "0.3.30"
config = "0.14.0"
log = "0.4.21"
futures = "0.3.30"
qdrant-client = "1.8.0" # Downgrade to 1.8.0
langchain-rust = { version = "4.0.4", features = ["qdrant"] }
uuid = { version = "1.8.0", features = ["v7"] }
