[package]
name = "dx-app"
version = "0.1.0"
authors = ["Thanaphoom Babparn <tp.babparn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
manganis = "0.2.2"
